--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -6,6 +6,12 @@
     name: python3-pip
     state: latest
 
+- name: Install ansible with pip3
+  pip:
+    executable: /usr/bin/pip3
+    name: ansible
+    state: latest
+
 - name: Install netmiko with pip3
   pip:
     executable: /usr/bin/pip3
