--- a/roles/ftp/tasks/main.yml
+++ b/roles/ftp/tasks/main.yml
@@ -18,11 +18,11 @@
     state: directory
     owner: nobody
     group: nogroup
-    mode: "a-w"
+    mode: 'a-w'
 
 - name: Create upload directory /home/ztp/ftp/files
   file:
-    path: /home/ztp/ftp
+    path: /home/ztp/ftp/files
     state: directory
     owner: ztp
     group: ztp
@@ -37,26 +37,26 @@
 - name: Modify /etc/vsftpd.conf file
   lineinfile:
     path: /etc/vsftpd.conf
-    insertafter: "^{{ item.after }}"
-    line: "{{ item.line }}"
+    insertafter: '^{{ item.after }}'
+    line: '{{ item.line }}'
     state: present
   with_items:
-    - after: ^#write_enable=YES
-      line: write_enable=YES
-    - after: ^#chroot_local_user=YES
-      line: chroot_local_user=YES
+    - after: '#write_enable=YES'
+      line: 'write_enable=YES'
+    - after: '#chroot_local_user=YES'
+      line: 'chroot_local_user=YES'
 
 - name: Add lines to /etc/vsftpd.conf file
   lineinfile:
     path: /etc/vsftpd.conf
-    line: "{{ item.line }}"
+    line: '{{ item.line }}'
     state: present
   with_items:
-    - line: "# Cutomized for appliance"
-    - line: user_sub_token=$USER
-    - line: local_root=/home/$USER/ftp
-    - line: userlist_enable=YES
-    - line: userlist_file=/etc/vsftpd.userlist
-    - line: userlist_deny=NO
+    - line: '# Cutomized for appliance'
+    - line: 'user_sub_token=$USER'
+    - line: 'local_root=/home/$USER/ftp'
+    - line: 'userlist_enable=YES'
+    - line: 'userlist_file=/etc/vsftpd.userlist'
+    - line: 'userlist_deny=NO'
   notify:
     - Restart vsftpd service
