--- a/roles/iperf3/tasks/main.yml
+++ b/roles/iperf3/tasks/main.yml
@@ -3,8 +3,8 @@
 
 - name: Download and install libiperf0 v{{ iperf3.version }}
   apt:
-    deb: "https://iperf.fr/download/ubuntu/libiperf0_{{ iperf3.version }}_amd64.deb"
+    deb: 'https://iperf.fr/download/ubuntu/libiperf0_{{ iperf3.version }}_amd64.deb'
 
 - name: Download and install iperf3 v{{ iperf3.version }}
   apt:
-    deb: "https://iperf.fr/download/ubuntu/iperf3_{{ iperf3.version }}_amd64.deb"
+    deb: 'https://iperf.fr/download/ubuntu/iperf3_{{ iperf3.version }}_amd64.deb'
