--- a/tuning.yml
+++ b/tuning.yml
@@ -1,31 +1,34 @@
 ---
 # file: tuning.yml
+
 - hosts: appliances
   gather_facts: no
   become: true
   roles:
-    #- common
-    #- wifi
-    #- iperf3
-    #- python
-    #- trex
-    #- ntp
-    #- git
+    - common
+    - wifi
+    - iperf3
+    - python
+    - trex
+    - ntp
+    - git
     - ftp
+    - tftp
+    - dhcp
 
-  #post_tasks:
+  post_tasks:
 
-   # - name: Restart machine
-   #  shell: sleep 2 && shutdown -r now "Ansible reboot triggered"
-   #   async: 1
-   #   poll: 0
-   #   ignore_errors: true
+    - name: Restart machine
+     shell: sleep 2 && shutdown -r now "Ansible reboot triggered"
+      async: 1
+      poll: 0
+      ignore_errors: true
 
-    #- name: Waiting for server to come back
-    #  become: false
-    #  local_action:
-    #    module: wait_for
-    #    port: 22
-    #    host: "{{ inventory_hostname }}"
-    #    search_regex: OpenSSH
-    #    delay: 10
+    - name: Waiting for server to come back
+      become: false
+      local_action:
+        module: wait_for
+        port: 22
+        host: '{{ inventory_hostname }}'
+        search_regex: OpenSSH
+        delay: 10
