--- a/tuning.yml
+++ b/tuning.yml
@@ -15,11 +15,12 @@
     - ftp
     - tftp
     - dhcp
+    - node
 
   post_tasks:
 
     - name: Restart machine
-     shell: sleep 2 && shutdown -r now "Ansible reboot triggered"
+      shell: sleep 2 && shutdown -r now "Ansible reboot triggered"
       async: 1
       poll: 0
       ignore_errors: true
